# xkcd-mcp

./: .cursorrules  .mcpbignore  .pre-commit-config.yaml  CHANGELOG_20260404_225103.md.bak  README.md  glama.json  justfile  llms-full.txt  llms.txt  manifest.json  pyproject.toml  start.ps1
assets/prompts/: examples.json  system.md  user.md
src/xkcd_mcp/: __init__.py  __main__.py  app.py  app_20260404_225026.py.bak  server.py  server_20260404_224902.py.bak  server_20260404_224920.py.bak  server_20260404_225032.py.bak  server_20260404_225036.py.bak  server_20260404_225039.py.bak  server_20260404_225041.py.bak  server_20260404_225044.py.bak  server_20260404_225046.py.bak  xkcd_api.py
tests/: test_xkcd_api.py  verify_search.py
web_sota/: package.json  start.ps1
web_sota/src/: App.tsx  index.css
