[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xkcd-mcp"
version = "0.3.0"
description = "FastMCP 3.2 xkcd server — official JSON API only (current / by number / random), no HTML scraping."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Sandra Schieder" }]
dependencies = [
    "fastmcp>=3.2",
    "httpx>=0.27",
    "starlette>=0.46",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.8", "pre-commit>=4"]
apps = ["prefab-ui>=0.14.0"]

[project.urls]
Homepage = "https://github.com/sandraschi/xkcd-mcp"
Repository = "https://github.com/sandraschi/xkcd-mcp"
Issues = "https://github.com/sandraschi/xkcd-mcp/issues"

[project.scripts]
xkcd-mcp = "xkcd_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "S", "UP", "RUF"]
ignore = ["S101", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
